Agregado img-section a los cards que permitiran una mayor facilidad para mostrar imagenes dentro de un card, logrando dar efecto de profile-card. Sin embargo la imagen se adapta perfectamente en ancho y alto al container, hay que obviamente agregar para que funcione en tamaño pequeño, muy pequeño, mediano y grande. Luego de esto hay que implementar animaciones a la imagen en el card y/o variantes que le den mas dinamismo a la misma. Seguido de eso agregar botones flotantes y así poder mejorar aun más la calidad del componente. Luego de todo esto, documentar el codigo en github con ejemplos de cada uno de los componentes para poder recordar bien su utilizacion

--- a/Css/Sass/buttons.sass
+++ b/Css/Sass/buttons.sass
@@ -26,12 +26,11 @@ button.cr.button
 	height: 2.2rem
 
 .cr.button.plain
-	border-radius: 0px
-
+	border-radius: 0 !important
 
 .cr.button.rounded 
 	border-radius: $button-radius
-
+	
 .cr.button
 	transition: background-color 0.3s
 	&:active
@@ -403,7 +402,7 @@ button.cr.button
 		background: $yellow
 		 
 /*----- FLOATING BUTTON --------*/
-button.button-float
+button.cr.button.float
 	position: fixed 
 	width: 56px
 	outline: none
@@ -438,8 +437,7 @@ button.button-float
 button.dark-bg
 	box-shadow: none !important
 
-
-.pulse
+.cr.button.pulse
 	overflow: hidden
 
 .ripple
@@ -473,13 +471,3 @@ button.dark-bg
 	100%
 		transform: scale(2)
 		opacity: 0 
-
-
-
-
-
-
-
-
-
-
