--- a/Css/Sass/cards.sass
+++ b/Css/Sass/cards.sass
@@ -63,14 +63,35 @@ div.cr.card
 		background: $black 
 		color: $white 
 
-	.img-section
+	.img-section[data-feature]
+		-o-transition: background 0.3s
+		-webkit-transition: background 0.3s
+		-moz-transition: background 0.3s
+		-ms-transition: background 0.3s
+		transition: background 0.3s
+
 		img 
 			display: block 
-			align-content: center 
+			align-content: center
+			transition: all 0.3s ease-out
 			margin: 0 auto
 			max-width: 100% 
-			height: auto 
-	
+			height: auto
+		&:hover
+			content: attr(data-feature)
+			position: absolute 
+			left: 0 
+			right: 0 
+			color: $white 
+			font-weight: bold 
+			font-size: 18px
+			width: 100% 
+			height: 100% 
+			background: rgba($black, .5)
+			&:before
+				
+
+
 	.card-body
 		height: auto 
 		overflow: auto 
