--- a/Css/main.css
+++ b/Css/main.css
@@ -49,12 +49,30 @@ div.cr.card {
   div.cr.card .card-head.black {
     background: #000;
     color: #fff; }
-  div.cr.card .img-section img {
-    display: block;
-    align-content: center;
-    margin: 0 auto;
-    max-width: 100%;
-    height: auto; }
+  div.cr.card .img-section[data-feature] {
+    -o-transition: background 0.3s;
+    -webkit-transition: background 0.3s;
+    -moz-transition: background 0.3s;
+    -ms-transition: background 0.3s;
+    transition: background 0.3s; }
+    div.cr.card .img-section[data-feature] img {
+      display: block;
+      align-content: center;
+      transition: all 0.3s ease-out;
+      margin: 0 auto;
+      max-width: 100%;
+      height: auto; }
+    div.cr.card .img-section[data-feature]:hover {
+      content: attr(data-feature);
+      position: absolute;
+      left: 0;
+      right: 0;
+      color: #fff;
+      font-weight: bold;
+      font-size: 18px;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5); }
   div.cr.card .card-body {
     height: auto;
     overflow: auto;
@@ -683,6 +701,18 @@ div.cr.snackbar.yellow {
     color: #404040; }
     div.cr.snackbar.yellow button.snack.action:active {
       background-color: #ffe822; }
+
+img.xsmall {
+  max-width: 30% !important;
+  height: auto; }
+
+img.small {
+  max-width: 45% !important;
+  height: auto; }
+
+img.medium {
+  max-width: 65% !important;
+  height: auto; }
 
 html {
   height: 100vh; }
