--- a/Css/Sass/cards.sass
+++ b/Css/Sass/cards.sass
@@ -63,13 +63,10 @@ div.cr.card
 		background: $black 
 		color: $white 
 
-	.img-section[data-feature]
-		-o-transition: background 0.3s
-		-webkit-transition: background 0.3s
-		-moz-transition: background 0.3s
-		-ms-transition: background 0.3s
-		transition: background 0.3s
-
+	.img-section
+		overflow: hidden 
+		position: relative 
+		height: 100%
 		img 
 			display: block 
 			align-content: center
@@ -77,19 +74,28 @@ div.cr.card
 			margin: 0 auto
 			max-width: 100% 
 			height: auto
-		&:hover
-			content: attr(data-feature)
+		.cr.feature
 			position: absolute 
-			left: 0 
-			right: 0 
-			color: $white 
-			font-weight: bold 
-			font-size: 18px
+			background: rgba($black, .8)
 			width: 100% 
-			height: 100% 
-			background: rgba($black, .5)
-			&:before
-				
+			height: 100%
+			display: inline-block
+			align-content: center 
+			text-align: center 
+			opacity: 0 
+			transition: opacity 0.3s ease-out
+			&:hover 
+				opacity: 1
+
+			.content 
+				position: relative
+				vertical-align: middle
+				display: inline
+				color: $white 
+				overflow: hidden 
+				background: none 
+				font-size: 14px
+				font-weight: bold
 
 
 	.card-body
@@ -99,6 +105,8 @@ div.cr.card
 		padding: 15px 15px 15px 15px
 		font-size: 16px
 		background: $white
+	
+
 
 	.card-body.pink 
 		background: $pink 
@@ -196,9 +204,6 @@ div.cr.card.no-footer
 		border-bottom-left-radius: 2px 
 		border-bottom-right-radius: 2px
 		padding-bottom: 25px !important  
-
-
-
 	
 .cr.card.blue 
 	background: $blue 
