--- a/Css/main.css
+++ b/Css/main.css
@@ -49,30 +49,38 @@ div.cr.card {
   div.cr.card .card-head.black {
     background: #000;
     color: #fff; }
-  div.cr.card .img-section[data-feature] {
-    -o-transition: background 0.3s;
-    -webkit-transition: background 0.3s;
-    -moz-transition: background 0.3s;
-    -ms-transition: background 0.3s;
-    transition: background 0.3s; }
-    div.cr.card .img-section[data-feature] img {
+  div.cr.card .img-section {
+    overflow: hidden;
+    position: relative;
+    height: 100%; }
+    div.cr.card .img-section img {
       display: block;
       align-content: center;
       transition: all 0.3s ease-out;
       margin: 0 auto;
       max-width: 100%;
       height: auto; }
-    div.cr.card .img-section[data-feature]:hover {
-      content: attr(data-feature);
+    div.cr.card .img-section .cr.feature {
       position: absolute;
-      left: 0;
-      right: 0;
-      color: #fff;
-      font-weight: bold;
-      font-size: 18px;
+      background: rgba(0, 0, 0, 0.8);
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.5); }
+      display: inline-block;
+      align-content: center;
+      text-align: center;
+      opacity: 0;
+      transition: opacity 0.3s ease-out; }
+      div.cr.card .img-section .cr.feature:hover {
+        opacity: 1; }
+      div.cr.card .img-section .cr.feature .content {
+        position: relative;
+        vertical-align: middle;
+        display: inline;
+        color: #fff;
+        overflow: hidden;
+        background: none;
+        font-size: 14px;
+        font-weight: bold; }
   div.cr.card .card-body {
     height: auto;
     overflow: auto;
