Corregido un pequeño error en los inputs y agregado mejoras en los cards

--- a/Css/Sass/inputs.sass
+++ b/Css/Sass/inputs.sass
@@ -129,8 +129,8 @@ div.cr.input.label
     white-space: nowrap
     display: inline-block
     input
-        left: -1px
-        display: inline-block
+        left: -4px
+        // display: inline-block
 
     div.label
         padding-top: 9.5px
