Bug en input aparentemente solucionado

--- a/Css/Sass/inputs.sass
+++ b/Css/Sass/inputs.sass
@@ -3,7 +3,6 @@
 .bold
     font-weight: bold
 
-    
 label
     width: 100px
     padding-top: 5px
@@ -191,7 +190,7 @@ div.cr.input.label
         padding-top: 9.5px
         padding-left: 20px
         padding-right: 18px
-        left: -5px
+        left: -2.5%
         background: lighten($gray, 30)
         color: lighten($black, 30)
         height: 31px
@@ -212,7 +211,7 @@ div.cr.input.label
         outline: none
         padding-right: 1.5rem
         padding-bottom: 0.2rem
-        font-size: 12px
+        font-size: 1.2rem
         left: -5px
         background: lighten($gray, 30)
         color: lighten($black, 30)
@@ -222,7 +221,7 @@ div.cr.input.label
         border-bottom-right-radius: 2px
         border: 0.5px solid lighten($gray, 20)
         border-left: 0px
-        display: inline
+        display: inline-block
         text-align: center
         font-weight: bold
         transition: background-color 0.3s
