--- a/Css/main.css
+++ b/Css/main.css
@@ -385,7 +385,7 @@ div.cr.input.label {
     padding-top: 9.5px;
     padding-left: 20px;
     padding-right: 18px;
-    left: -5px;
+    left: -2.5%;
     background: #ebebeb;
     color: #4d4d4d;
     height: 31px;
@@ -405,7 +405,7 @@ div.cr.input.label {
     outline: none;
     padding-right: 1.5rem;
     padding-bottom: 0.2rem;
-    font-size: 12px;
+    font-size: 1.2rem;
     left: -5px;
     background: #ebebeb;
     color: #4d4d4d;
@@ -415,7 +415,7 @@ div.cr.input.label {
     border-bottom-right-radius: 2px;
     border: 0.5px solid #d1d1d1;
     border-left: 0px;
-    display: inline;
+    display: inline-block;
     text-align: center;
     font-weight: bold;
     transition: background-color 0.3s; }
