--- a/Css/main.css
+++ b/Css/main.css
@@ -871,6 +871,7 @@ button.cr.button {
   text-align: center;
   font-size: 0.9rem;
   font-weight: bold;
+  margin-bottom: 0.2rem;
   user-select: none;
   position: relative;
   text-decoration: none;
@@ -1025,7 +1026,7 @@ button.cr.button {
   background: #2196F3;
   color: #fff; }
   .cr.button.blue:active {
-    background: #1565C0; }
+    background: #0a6ebd; }
 
 .cr.button.white {
   background: #fff;
@@ -1040,49 +1041,49 @@ button.cr.button {
   background: #673AB7;
   color: #fff; }
   .cr.button.deep-purple:active {
-    background: #311B92; }
+    background: #46287d; }
 
 .cr.button.gold {
   background: #bf9b30;
   color: #fff; }
   .cr.button.gold:active {
-    background: #a67c00; }
+    background: #826921; }
 
 .cr.button.green {
   background: #00C853;
   color: #fff; }
   .cr.button.green:active {
-    background: #009900; }
+    background: #007c33; }
 
 .cr.button.red {
   background: #F44336;
   color: #fff; }
   .cr.button.red:active {
-    background: #B71C1C; }
+    background: #d2190b; }
 
 .cr.button.orange {
   background: #FF9800;
   color: #fff; }
   .cr.button.orange:active {
-    background: #E65100; }
+    background: #b36a00; }
 
 .cr.button.pink {
   background: #E91E63;
   color: #fff; }
   .cr.button.pink:active {
-    background: #880E4F; }
+    background: #aa1145; }
 
 .cr.button.light-blue {
   background: #03A9F4;
   color: #fff; }
   .cr.button.light-blue:active {
-    background: #01579B; }
+    background: #0275a8; }
 
 .cr.button.indigo {
   background: #3F51B5;
   color: #fff; }
   .cr.button.indigo:active {
-    background: #1A237E; }
+    background: #2b387c; }
 
 .cr.button.black {
   background: #000;
@@ -1092,85 +1093,85 @@ button.cr.button {
   background: #009688;
   color: #fff; }
   .cr.button.teal:active {
-    background: #004D40; }
+    background: #004a43; }
 
 .cr.button.amber {
   background: #FFC107;
   color: #fff; }
   .cr.button.amber:active {
-    background: #FF6F00; }
+    background: #ba8b00; }
 
 .cr.button.blue.hoverable {
   background: #2196F3;
   color: #fff; }
   .cr.button.blue.hoverable:hover {
-    background: #1565C0; }
+    background: #0c82df; }
   .cr.button.blue.hoverable:active {
-    background: #1565C0; }
+    background: #0a6ebd; }
 
 .cr.button.deep-purple.hoverable {
   background: #673AB7;
   color: #fff; }
   .cr.button.deep-purple.hoverable:hover {
-    background: #4527A0; }
+    background: #563098; }
   .cr.button.deep-purple.hoverable:active {
-    background: #673AB7; }
+    background: #46287d; }
 
 .cr.button.gold.hoverable {
   background: #bf9b30;
   color: #fff; }
   .cr.button.gold.hoverable:hover {
-    background: #a67c00; }
+    background: #9e8128; }
   .cr.button.gold.hoverable:active {
-    background: #bf9b30; }
+    background: #826921; }
 
 .cr.button.green.hoverable {
   background: #00C853;
   color: #fff; }
   .cr.button.green.hoverable:hover {
-    background: #00b300; }
+    background: #009f42; }
   .cr.button.green.hoverable:active {
-    background: #009900; }
+    background: #007c33; }
 
 .cr.button.red.hoverable {
   background: #F44336;
   color: #fff; }
   .cr.button.red.hoverable:hover {
-    background: #D32F2F; }
+    background: #f21f0f; }
   .cr.button.red.hoverable:active {
-    background: #B71C1C; }
+    background: #d2190b; }
 
 .cr.button.orange.hoverable {
   background: #FF9800;
   color: #fff; }
   .cr.button.orange.hoverable:hover {
-    background: #F57C00; }
+    background: #d68000; }
   .cr.button.orange.hoverable:active {
-    background: #E65100; }
+    background: #b36a00; }
 
 .cr.button.pink.hoverable {
   background: #E91E63;
   color: #fff; }
   .cr.button.pink.hoverable:hover {
-    background: #C2185B; }
+    background: #d68000; }
   .cr.button.pink.hoverable:active {
-    background: #880E4F; }
+    background: #b36a00; }
 
 .cr.button.light-blue.hoverable {
   background: #03A9F4;
   color: #fff; }
   .cr.button.light-blue.hoverable:hover {
-    background: #0288D1; }
+    background: #038dcc; }
   .cr.button.light-blue.hoverable:active {
-    background: #01579B; }
+    background: #0275a8; }
 
 .cr.button.indigo.hoverable {
   background: #3F51B5;
   color: #fff; }
   .cr.button.indigo.hoverable:hover {
-    background: #303F9F; }
+    background: #344397; }
   .cr.button.indigo.hoverable:active {
-    background: #1A237E; }
+    background: #2b387c; }
 
 .cr.button.black.hoverable {
   background: #000;
@@ -1180,9 +1181,9 @@ button.cr.button {
   background: #009688;
   color: #fff; }
   .cr.button.teal.hoverable:hover {
-    background: #00796B; }
+    background: #006d63; }
   .cr.button.teal.hoverable:active {
-    background: #004D40; }
+    background: #004a43; }
 
 .cr.button.amber.hoverable {
   background: #FFC107;
