Modificado cambio importante en los inputs material que no se dejaban cambiar bien el color

--- a/Css/Sass/inputs.sass
+++ b/Css/Sass/inputs.sass
@@ -340,62 +340,88 @@ div.cr.input.label
         transition: transform 0.3s
 
 .cr-material-field.blue
-    .is-focused, .m-label 
-        color: $blue !important 
     &:after 
         background-color: $blue !important
+.cr-material-field.blue.is-focused
+    .m-label
+        color: $blue !important 
+
 
 .cr-material-field.white
-    .is-focused, .m-label
-        color: $white !important
     &:after
         background-color: $white !important
+.cr-material-field.white.is-focused
+    .m-label
+        color: $white !important 
 
-   
 
 .cr-material-field.red 
-    .is-focused, .m-label
-        color: $red !important 
     &:after 
         background-color: $red !important
+.cr-material-field.red.is-focused
+    .m-label
+        color: $red !important 
+
 
 .cr-material-field.green
-    .is-focused, .m-label
-        color: $green !important 
     &:after 
         background-color: $green !important
+.cr-material-field.green.is-focused
+    .m-label
+        color: $green !important 
+
 
 .cr-material-field.amber 
-    .is-focused, .m-label
-        color: $amber !important 
     &:after 
         background-color: $amber !important 
+.cr-material-field.amber.is-focused
+    .m-label
+        color: $amber !important 
+
     
 .cr-material-field.yellow
-    .is-focused, .m-label
-        color: $yellow !important 
     &:after 
         background-color: $yellow !important 
+.cr-material-field.yellow.is-focused
+    .m-label
+        color: $yellow !important 
+
 
 .cr-material-field.gold 
-    .is-focused, .m-label
-        color: $gold !important 
     &:after 
         background-color: $gold !important 
+.cr-material-field.gold.is-focused
+    .m-label
+        color: $gold !important 
 
 .cr-material-field.purple 
-    .is-focused, .m-label
-        color: $purple !important 
     &:after 
         background-color: $purple !important
+.cr-material-field.purple.is-focused
+    .m-label
+        color: $purple !important 
+
 
 .cr-material-field.orange 
-    .is-focused, .m-label
-        color: $orange !important 
     &:after 
         background-color: $orange !important 
+.cr-material-field.orange.is-focused
+    .m-label
+        color: $orange !important 
 
+.cr-material-field.indigo 
+    &:after 
+        background-color: $indigo !important 
+.cr-material-field.indigo.is-focused
+    .m-label
+        color: $indigo !important 
 
+.cr-material-field.black 
+    &:after 
+        background-color: $black !important 
+.cr-material-field.black.is-focused
+    .m-label
+        color: $black !important 
 
 
 .is-focused .m-label
