--- a/Css/main.css
+++ b/Css/main.css
@@ -789,6 +789,42 @@ div.cr.snackbar.yellow {
     div.cr.snackbar.yellow button.snack.action:active {
       background-color: #ffe822; }
 
+div.cr.checkbox {
+  width: 200px;
+  padding: 6px 2px;
+  position: relative;
+  margin-bottom: 20px; }
+  div.cr.checkbox label {
+    position: absolute;
+    display: inline-block;
+    font-family: "Nunito", open-sans !important;
+    left: 8% !important; }
+    div.cr.checkbox label:before {
+      content: "";
+      box-sizing: border-box;
+      display: inline-block;
+      position: absolute;
+      transition: background 0.3s;
+      top: 20%;
+      left: -30%;
+      width: 20px;
+      height: 20px;
+      border: 1.5px solid #9E9E9E;
+      border-radius: 2px; }
+  div.cr.checkbox input[type="checkbox"] {
+    border: none !important;
+    display: inline;
+    opacity: 1;
+    position: absolute;
+    left: -6.5%;
+    top: 110%;
+    width: 20px;
+    z-index: 1;
+    height: 20px;
+    cursor: pointer; }
+  div.cr.checkbox input[type="checkbox"]:checked + label:before {
+    background: #E91E63; }
+
 img.xsmall {
   max-width: 30% !important;
   height: auto; }
@@ -804,50 +840,8 @@ img.medium {
 html {
   height: 100vh; }
 
-.col-1 {
-  width: 8.33%; }
-
-.col-2 {
-  width: 16.66%; }
-
-.col-3 {
-  width: 25%; }
-
-.col-4 {
-  width: 33.33%; }
-
-.col-5 {
-  width: 41.66%; }
-
-.col-6 {
-  width: 50%; }
-
-.col-7 {
-  width: 58.33%; }
-
-.col-8 {
-  width: 66.66%; }
-
-.col-9 {
-  width: 75%; }
-
-.col-10 {
-  width: 83.33%; }
-
-.col-11 {
-  width: 91.66%; }
-
-.col-12 {
-  width: 100%; }
-
 body {
   font-family: "Nunito", sans-serif; }
-
-div.cr-inline {
-  float: left;
-  display: inline-block;
-  margin-left: 0.2rem;
-  margin-right: 0.2rem; }
 
 .cr.container {
   height: 100vh;
